--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Git Practice</title>
-</head>
-<body>
-  <h1>Hello Git</h1>
-</body>
-</html>
+<h1>Hello Git</h1>
+<p>This is my first Git practice project.</p>
